createVolumeMount.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers: 
    - name: event-simulator
      image: kodekloud/event-simulator
	  volumemounts:
	  - mountPath: /log
	    name: log-volume
  volumes:
    - name: log-volume
	  hostPath:
	    path: /var/log/webapp
